--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,7 @@
 
 ## Migrate away from bitnami postgres image
 
+## Fix github action deprecation info for nginx
+
+https://github.com/SAP/kubeapps/actions/workflows/release-bitnami-nginx.yml
+
